--- a/style.css
+++ b/style.css
@@ -22,3 +22,51 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  background-color: var(--background-default);
+}
+
+h1, h2, h3 {
+  font-weight: bold;
+
+  color: var(--text-primary);
+}
+
+p {
+  color: var(--text-secondary);
+}
+
+span {
+  text-transform: uppercase;
+  font-weight: bold;
+
+  color: var(--text-headline);
+}
+
+img {
+  max-width: 100%;
+  border-radius: 28px;
+}
+
+.page {
+  width: 1120px;
+  margin: 7rem auto 2.5rem;
+}
+
+.page .hero {
+  border-bottom: 1px solid var(--border);
+}
+
+.page .hero h1 {
+  margin-block: .5rem 2.5rem;
+
+  font-size: 2.25rem;
+}
+
+.page .hero p {
+  text-align: center;
+  font-style: italic;
+
+  margin-block: 1.5rem 2.75rem;
+}
