--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ h1, h2, h3 {
 }
 
 p {
+  font-size: 1rem;
+
   color: var(--text-secondary);
 }
 
@@ -54,10 +56,6 @@ img {
   margin: 7rem auto 2.5rem;
 }
 
-.page .hero {
-  border-bottom: 1px solid var(--border);
-}
-
 .page .hero h1 {
   margin-block: .5rem 2.5rem;
 
@@ -69,4 +67,69 @@ img {
   font-style: italic;
 
   margin-block: 1.5rem 2.75rem;
+}
+
+.page main {
+  padding-block: 4rem 2.5rem;
+  border-block: 1px solid var(--border);
+}
+
+main .destinations {
+  margin-bottom: 4rem;
+}
+
+main .destinations h2 {
+  margin-block: 4px 8px;
+
+  font-size: 2rem;
+}
+
+main ol article img {
+  width: 100%;
+  height: 350px;
+  margin-block: 3rem 1.25rem;
+
+  object-fit: cover;
+  object-position: center;
+}
+
+main ol article:first-child img {
+  margin-top: 0;
+}
+
+main ol article:last-child img {
+  object-position: bottom;
+}
+
+main ol article > li {
+  margin-left: 2.25rem;
+  
+  font-size: 1.75rem;
+  font-weight: bold;
+}
+
+main ol article h3 {
+  font-size: 1.75rem;
+}
+
+main ol article p {
+  margin-block: 4px 1.25rem;
+}
+
+main ol article ul {
+  list-style: disc;
+
+  margin-left: 1.5rem;
+}
+
+main ol article ul li::marker {
+  color: black;
+
+  font-size: .75rem;
+}
+
+main ol article ul li:nth-child(1) {
+  font-weight: bold;
+
+  color: var(--accent-blue);
 }
